pause video fix from stackoverflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -358,8 +358,7 @@ h5 a,
 h6 a,
 i a,
 main li a,
-p a,
-label a {
+p a {
   -webkit-box-shadow: inset 0 -2px 0 rgba(var(--primary-color), 0.5),
     0 0 0 rgba(var(--primary-color), 0.5);
   box-shadow: inset 0 -2px 0 rgba(var(--primary-color), 0.5),
@@ -454,6 +453,7 @@ p a:hover {
   font-size: var(--fontsize-note);
   position: relative;
   margin: 0 var(--grid-gap-1);
+  color: white;
 }
 .switch input {
   opacity: 0;
